--- a/assets/css/poke-info.css
+++ b/assets/css/poke-info.css
@@ -1,176 +1,192 @@
-/* body {
-    background-color: #ee7f30;
-} */
+body {
+  background-image: url("/assets/imgs/img.jpg");
+}
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .content {
-    height: 100%;
-    width: 100vw;
+  height: 100%;
+  width: 100vw;
 }
 
 .normal {
-    background-color: #a6a877;
+  background-color: #a6a877;
 }
 
 .grass {
-    background-color: #77c850;
+  background-color: #77c850;
 }
 
 .fire {
-    background-color: #ee7f30;
+  background-color: #ee7f30;
 }
 
 .water {
-    background-color: #678fee;
+  background-color: #678fee;
 }
 
 .electric {
-    background-color: #f7cf2e;
+  background-color: #f7cf2e;
 }
 
 .ice {
-    background-color: #98d5d7;
+  background-color: #98d5d7;
 }
 
 .ground {
-    background-color: #dfbf69;
+  background-color: #dfbf69;
 }
 
 .flying {
-    background-color: #a98ff0;
+  background-color: #a98ff0;
 }
 
 .poison {
-    background-color: #a040a0;
+  background-color: #a040a0;
 }
 
 .fighting {
-    background-color: #bf3029;
+  background-color: #bf3029;
 }
 
 .psychic {
-    background-color: #f65687;
+  background-color: #f65687;
 }
 
 .dark {
-    background-color: #725847;
+  background-color: #725847;
 }
 
 .rock {
-    background-color: #b8a137;
+  background-color: #b8a137;
 }
 
 .bug {
-    background-color: #a8b720;
+  background-color: #a8b720;
 }
 
 .ghost {
-    background-color: #6e5896;
+  background-color: #6e5896;
 }
 
 .steel {
-    background-color: #b9b7cf;
+  background-color: #b9b7cf;
 }
 
 .dragon {
-    background-color: #6f38f6;
+  background-color: #6f38f6;
 }
 
 .fairy {
-    background-color: #f9aec7;
+  background-color: #f9aec7;
 }
 
 .box-main {
-    /* background-color: red; */
-    display: flex;
-    justify-content: space-between;
-    font-size: 1rem;
-    color: white;  
-    padding: 1rem 1rem 0rem .5rem; 
+  /* background-color: red; */
+  display: flex;
+  justify-content: space-between;
+  font-size: 1rem;
+  color: white;
+  padding: 1rem 1rem 0rem 0.5rem;
 }
 
 .box-main h3 {
-    font-size: 1.5rem;
-    text-transform: capitalize;
+  font-size: 1.5rem;
+  text-transform: capitalize;
 }
 
 .box-main .pokemon-number {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .box-main .types {
-    filter: brightness(1.2);
-    display: flex;
-    gap: 1rem;
-    list-style: none;
-    padding: .5rem;
+  filter: brightness(1.2);
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+  padding: 0.5rem;
 }
 
 .box-main .types .type {
-    border-radius: 100px;
-    padding: .3rem .5rem .3rem .5rem;
+  border-radius: 100px;
+  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
 }
 
 .image-container {
-    display: grid;
-    place-content: center;
-    width: 100%;
-    height: 100%;
-    height:30%;
-    z-index: 1;
-    padding: 1rem;
+  display: grid;
+  place-content: center;
+  /* width: 100%; */
+  /* height: 100%; */
+  /* height: 30%; */
+  /* z-index: 1; */
+  /* padding: 5rem; */
 }
 
 .image-container img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  max-height: 100%; /* Define a altura máxima da imagem para 100% do contêiner */
+  width: auto;
+  height: auto;
+  object-fit: cover;
 }
 
 .info-box {
-    height: 100%;
-    background-color: white;
-    border-radius: 1rem 1rem 0 0;
-    position: relative;   
-    padding: 1rem;
+  height: 40vh;
+  margin-bottom: 0;
+  background-color: white;
+  border-radius: 1rem 1rem 1rem 1rem;
+  position: relative;
+  padding: 1rem;
 }
 
 .info-box .buttons-container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .info-box .buttons-container button {
-    border: none;
-    background: none;
-    cursor: pointer;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
-
-
 .about {
-    margin-top: 1rem;
-    list-style: none;
-    display: block;
+  margin-top: 1rem;
+  list-style: none;
+  display: block;
 }
 
 #about-button {
-    /* border-bottom: 2px solid blue; */
-    transition: border-bottom 0.1s;
+  border-bottom: 2px solid blue;
+  transition: border-bottom 0.1s;
 }
 
 #base-stats-button {
-    /* border-bottom: 2px solid blue; */
-    transition: border-bottom 0.1s;
+  /* border-bottom: 2px solid blue; */
+  transition: border-bottom 0.1s;
 }
 
 .base-stats {
-    margin-top: 1rem;
-    list-style: none;
-    display: none;
-    
+  margin-top: 1rem;
+  list-style: none;
+  display: none;
+}
+
+.back-btn {
+  background: white;
+  border: none;
+  border-radius: 1rem;
+  padding: 0.4rem;
+  margin: 0.5rem;
+}
+
+@media screen and (min-width: 700px) {
+  .content {
+    max-width: 700px;
+    margin: 0 auto;
+  }
 }
