--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,6 +6,10 @@
     list-style: none;
 }
 
+.container-more-info {
+    
+}
+
 .normal {
     background-color: #a6a877;
 }
@@ -81,7 +85,7 @@
 .pokemon {
     display: flex;
     flex-direction: column;
-    margin: .5rem;
+    margin: 0.5rem;
     padding: 1rem;
     border-radius: 1rem;
 }
@@ -97,6 +101,7 @@
     text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
+    font-size: 1.3rem;
 }
 
 .pokemon .detail {
@@ -104,6 +109,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .pokemon .detail .types {
@@ -116,7 +122,7 @@
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .800rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
@@ -124,7 +130,22 @@
 
 .pokemon .detail img {
     max-width: 100%;
-    height: 70px;
+    height: 120px;
+}
+
+.pokemon-more-info {
+    padding: .700rem .700rem;
+    margin: .50rem 0 0 0;
+    font-size: .700rem;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 25rem;
+    cursor: pointer;
+}
+
+.pokemon-more-info:hover {
+    background-color: #5161d6;
 }
 
 .pagination {
@@ -137,13 +158,13 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
+    padding: .700rem .700rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .700rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
-    border-radius: 1rem;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 380px) {
