Colored the border os pokemon box and type box

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,7 +6,10 @@
 body {
     background-color: #f6f8fc;
 }
-
+h1 {
+    text-align: center;
+    
+}
 .content {
     width: 100vw;
     height: 100vh;
