--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,10 +8,11 @@ body {
 }
 
 .content {
+    border: 3px solid black;
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #de4646;
 }
 
 @media screen and (min-width: 992px) {
