--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,35 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Press Start 2P', cursive;
     box-sizing: border-box;
+    font-size: 8pt;
 }
 
 body {
-    background-color: #f6f8fc;
+    background-image: url(/assets/image/bd.jpg);
 }
+
 
 .content {
-    width: 100vw;
-    height: 100vh;
-    padding: 1rem;
-    background-color: #fff;
+    width: 80vw;
+    margin: auto;
+    height: auto;
+    padding: auto;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
+h1 {
+    font-family: 'Pokemon Solid', sans-serif;
+    text-align: center;
+    font-size: 80pt;
+    color: #FFFB0F;
+    -webkit-text-stroke: 1px #3D68BB;
+    
+
+    @media screen and (min-width: 992px) {
+        .content {
+            max-width: 992px;
+            height: auto;
+            margin: 1rem auto;
+            border-radius: 1rem;
+        }
     }
-}
