commit003-joseamerico-git adicionando tela html básica de detalhes ao desafio

--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -11,7 +11,8 @@
 }
 
 .grass {
-    background-color: #77c850;
+    background-color: #9CCD51;
+
 }
 
 .fire {
@@ -27,7 +28,7 @@
 }
 
 .ice {
-    background-color: #98d5d7;
+    background-color: #678FEE;
 }
 
 .ground {
