--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,131 +1,127 @@
 .pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
     padding: 0;
     list-style: none;
 }
 
-.normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
 
 .pokemon {
     display: flex;
     flex-direction: column;
+    width: 30vw;
+    height: 30vh;
     margin: .5rem;
     padding: 1rem;
+    cursor: pointer;
+    transition: 250ms;
     border-radius: 1rem;
 }
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
-}
 
-.pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
-}
-
-.pokemon .detail {
+.title {
     display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: space-between;
+    width: 100%;
+    height: 3vh;
+    font-size: 18px;
 }
 
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
+
+.details img {
+    max-width: 220px;
+    max-height: 150px;
+    position: absolute;
+    margin: -7vh 0 0 3vw;
+}
+
+
+.details {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    width: 100%;
+    overflow-y: hidden;
+}
+
+.infos {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: -1vh;
+}
+
+.types,
+.abilities {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 1vh;
     list-style: none;
 }
 
-.pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
-    text-align: center;
+
+.types-list,
+.abilities-list {
+    display: flex;
+    gap: 1.5vw;
 }
 
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
+.abilities {
+    min-height: 4vh;
 }
+
+.abilities-list {
+    flex-direction: column;
+    width: 100%;
+    gap: 0;
+    min-height: 3vh;
+}
+
+.type,
+.ability {
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    height: 3vh;
+    text-align: center;
+    border-radius: 1rem;
+}
+
+.type {
+    font-size: 15px;
+    color: #fff;
+    width: 5vw;
+    text-shadow: 0 0 3px black;
+    filter: brightness(1.2);
+}
+
+.ability {
+    background-color: white;
+    font-size: 14px;
+    max-width: 10vw;
+    color: black;
+    text-shadow: none;
+}
+
+li {
+    padding: 0;
+    margin: 15px 0 0px 0;
+    font-size: medium;
+    color: #fff;
+    text-shadow: 0 0 3px black;
+}
+
+.pokemon p {
+    padding: 0;
+    margin: 15px 0 0px 0;
+    font-size: medium;
+    color: #fff;
+    text-shadow: 0 0 3px black;
+}
+
 
 .pagination {
     display: flex;
@@ -139,27 +135,293 @@
 .pagination button {
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    width: 10vw;
+    height: 5vh;
+    font-size: 16px;
     color: #fff;
     background-color: #6c79db;
     border: none;
+    cursor: pointer;
     border-radius: 1rem;
 }
 
-@media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
-    }
+button:active {
+    transform: scale(0.93);
 }
 
-@media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+.normal,
+.normal:hover,
+.grass,
+.grass:hover,
+.fire,
+.fire:hover,
+.water,
+.water:hover,
+.electric,
+.electric:hover,
+.flying,
+.flying:hover,
+.fighting,
+.fighting:hover,
+.bug,
+.bug:hover,
+.dark,
+.dark:hover,
+.poison,
+.poison:hover,
+.psychic,
+.psychic:hover,
+.dragon,
+.dragon:hover,
+.fairy,
+.fairy:hover,
+.steel,
+.steel:hover,
+.ground,
+.ground:hover,
+.rock,
+.rock:hover,
+.ice,
+.ice:hover,
+.ghost,
+.ghost:hover {
+
+    background: url("../pokebg.png");
+    background-size: cover;
+    background-position: center;
+
 }
 
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+.normal {
+    background-color: #a6a877;
 }
+
+.normal:hover {
+    background-color: #636447;
+}
+
+.grass {
+    background-color: #77c850;
+}
+
+.grass:hover {
+    background-color: #426e2e;
+}
+
+.fire {
+    background-color: #ee7f30;
+}
+
+.fire:hover {
+    background-color: #7e4318;
+}
+
+.water {
+    background-color: #678fee;
+}
+
+.water:hover {
+    background-color: #3a5186;
+}
+
+.electric {
+    background-color: #f7cf2e;
+}
+
+.electric:hover {
+    background-color: #645411;
+}
+
+.ice {
+    background-color: #98d5d7;
+}
+
+.ice:hover {
+    background-color: #537475;
+}
+
+.ground {
+    background-color: #dfbf69;
+}
+
+.ground:hover {
+    background-color: #695a30;
+}
+
+.flying {
+    background-color: #a98ff0;
+}
+
+.flying:hover {
+    background-color: #4d416e;
+}
+
+.poison {
+    background-color: #a040a0;
+}
+
+.poison:hover {
+    background-color: #491d49;
+}
+
+.fighting {
+    background-color: #bf3029;
+}
+
+.fighting:hover {
+    background-color: #521411;
+}
+
+.psychic {
+    background-color: #f65687;
+}
+
+.psychic:hover {
+    background-color: #571d2e;
+}
+
+.dark {
+    background-color: #725847;
+}
+
+.dark:hover {
+    background-color: #352820;
+}
+
+.rock {
+    background-color: #b8a137;
+}
+
+.rock:hover {
+    background-color: #4d4316;
+}
+
+.bug {
+    background-color: #a8b720;
+}
+
+.bug:hover {
+    background-color: #49500d;
+}
+
+.ghost {
+    background-color: #6e5896;
+}
+
+.ghost:hover {
+    background-color: #302742;
+}
+
+.steel {
+    background-color: #b9b7cf;
+}
+
+.steel:hover {
+    background-color: #54535e;
+}
+
+.dragon {
+    background-color: #6f38f6;
+}
+
+.dragon:hover {
+    background-color: #261357;
+}
+
+.fairy {
+    background-color: #f9aec7;
+}
+
+.fairy:hover {
+    background-color: #573d46;
+}
+
+@media screen and (max-width: 800px) {
+
+    .pokemons {
+        flex-direction: column;
+    }
+
+
+    .pokemon {
+        width: 80vw;
+        height: 55vh;
+    }
+
+    .details {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .image {
+        display: flex;
+        justify-content: center;
+    }
+
+    .details img {
+        position: relative;
+        margin: 0
+    }
+
+
+    .infos {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        top: -1vh;
+        width: 100%;
+    }
+
+    .types,
+    .abilities {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 1vh;
+        list-style: none;
+    }
+
+
+    .types-list,
+    .abilities-list {
+        display: flex;
+        gap: 4vw;
+    }
+
+    .abilities {
+        min-height: 4vh;
+    }
+
+    .abilities-list {
+        flex-direction: column;
+        width: 100%;
+        gap: 0;
+        min-height: 3vh;
+    }
+
+    .type,
+    .ability {
+        height: 4vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .type {
+        width: 30vw;
+        font-size: 20px;
+    }
+
+    .ability {
+        background-color: white;
+        font-size: 14px;
+        max-width: 50vw;
+        color: black;
+        text-shadow: none;
+    }
+
+}
+
+@media screen and (min-width: 576px) {}
+
