--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,23 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #fff;
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
-    padding: 1rem;
+    max-width: 100vw;
+    height: auto;
     background-color: #fff;
 }
 
 @media screen and (min-width: 992px) {
     .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
