--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,10 +8,20 @@ body {
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     padding: 1rem;
     background-color: #fff;
+    margin: auto;
+}
+
+.pokemon-card2 {
+    border: 1px solid black;
+    max-width: 40%;
+    border-radius: 10px;
+    padding: 20px;
 }
 
 @media screen and (min-width: 992px) {
