--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,133 +1,74 @@
-.pokemons {
+body{
+    background-color: lightgray;
+}
+
+.content{
+    padding: 1rem;
+    background-color: #fff;
+    padding-bottom: 10vh;
+}
+.content h1{
+    margin: 0;
+    padding: 2rem 0 1rem 0;
+}
+
+.pokemons{
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
-
-.pokemon {
+.pokemon{
     display: flex;
     flex-direction: column;
     margin: .5rem;
-    padding: 1rem;
+    padding: 1rem 1rem;
     border-radius: 1rem;
 }
-
-.pokemon .number {
-    color: #000;
-    opacity: .3;
+.pokemon:hover{
+    box-shadow: 2px 2px 5px gray;
+    margin-top: -1px;
+    transition: .3s;
+}
+.pokemon .number{
+    color: rgba(0, 0, 0, .3);
     text-align: right;
     font-size: .625rem;
 }
-
-.pokemon .name {
-    text-transform: capitalize;
+.pokemon .name{
     color: #fff;
-    margin-bottom: .25rem;
+    margin-bottom: 0.25rem;
+    text-transform: capitalize;
 }
-
-.pokemon .detail {
+.pokemon .detail{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
-
-.pokemon .detail .types {
+.pokemon .detail .types{
     padding: 0;
     margin: 0;
     list-style: none;
+    text-transform: capitalize;
 }
-
-.pokemon .detail .types .type {
+.pokemon .detail .types .type{
+    filter: brightness(1.1);
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
     text-align: center;
 }
-
-.pokemon .detail img {
+.pokemon .detail img{
     max-width: 100%;
     height: 70px;
 }
 
-.pagination {
+.pagination{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -135,31 +76,33 @@
     width: 100%;
     padding: 1rem;
 }
-
-.pagination button {
+.pagination button{
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    background-color: rgb(220, 50, 50);
     color: #fff;
-    background-color: #6c79db;
     border: none;
-    border-radius: 1rem;
+    border-radius: 1rem;    
 }
 
-@media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
+@media screen and (min-width: 380px){
+    .pokemons{
+        grid-template-columns: 1fr 1fr; 
     }
 }
 
-@media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
+@media screen and (min-width: 576px){
+    .pokemons{
+        grid-template-columns: 1fr 1fr 1fr; 
     }
 }
 
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+@media screen and (min-width: 992px){
+    .content{
+        max-width: 992px;
+        margin: 0 auto;
+    }
+    .pokemons{
+        grid-template-columns: 1fr 1fr 1fr 1fr; 
     }
 }
