feat: adicionado um loader ao clicar no botão de carregar mais

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,31 @@
 * {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
+	font-family: "Roboto", sans-serif;
+	box-sizing: border-box;
 }
 
 body {
-    background-color: #f6f8fc;
+	background-color: #f6f8fc;
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
-    padding: 1rem;
-    background-color: #fff;
+	width: 100vw;
+	height: 100vh;
+	padding: 1rem;
+	background-color: #fff;
+}
+
+.content h1 {
+	color: #ffcb07;
+	-webkit-text-stroke: 0.08rem blue;
+	text-align: center;
+	font-size: 3rem;
 }
 
 @media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
+	.content {
+		max-width: 992px;
+		height: auto;
+		margin: 1rem auto;
+		border-radius: 1rem;
+	}
 }
