--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,6 +6,7 @@
     list-style: none;
 }
 
+
 .normal {
     background-color: #a6a877;
 }
@@ -125,6 +126,39 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+}
+
+.pokemon .detail .Height{
+    background: #a99696de;
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
+.pokemon .detail .Height{
+    background: #a99696de;
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
+.pokemon .detail .Weight{
+    background: #a99696de;
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
 }
 
 .pagination {
