--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,108 +1,111 @@
 .pokemons {
+    list-style: none;
+    padding: 0;
+    margin: 0;
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
 }
 
 .normal {
-    background-color: #a6a877;
+    background-color: #9099a1;
 }
-
 .grass {
-    background-color: #77c850;
+    background-color: #63bb5b;
 }
-
 .fire {
-    background-color: #ee7f30;
+    background-color: #ff9c54;
 }
-
 .water {
-    background-color: #678fee;
+    background-color: #4d90d5;
 }
-
 .electric {
-    background-color: #f7cf2e;
+    background-color: #f3d23b;
 }
-
 .ice {
-    background-color: #98d5d7;
+    background-color: #74cec0;
 }
-
 .ground {
-    background-color: #dfbf69;
+    background-color: #d97746;
 }
-
 .flying {
-    background-color: #a98ff0;
+    background-color: #8fa8dd;
 }
-
 .poison {
-    background-color: #a040a0;
+    background-color: #ab6ac8;
 }
-
 .fighting {
-    background-color: #bf3029;
+    background-color: #ce4069;
 }
-
 .psychic {
-    background-color: #f65687;
+    background-color: #f97176;
 }
-
 .dark {
-    background-color: #725847;
+    background-color: #5a5366;
 }
-
 .rock {
-    background-color: #b8a137;
+    background-color: #c7b78b;
 }
-
 .bug {
-    background-color: #a8b720;
+    background-color: #90c12c;
 }
-
 .ghost {
-    background-color: #6e5896;
+    background-color: #5269ac;
 }
-
 .steel {
-    background-color: #b9b7cf;
+    background-color: #5a8ea1;
 }
-
 .dragon {
-    background-color: #6f38f6;
+    background-color: #0a6dc4;
+}
+.fairy {
+    background-color: #ec8fe6;
 }
 
-.fairy {
-    background-color: #f9aec7;
+.pokemons__card {
+    text-decoration: none;
 }
 
 .pokemon {
+    position: relative;
+    margin: .5rem;
+    padding: .5rem 1rem;
+    border-radius: 16px;
+    color: white;
     display: flex;
     flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
+    box-shadow: 0 2.5px 5px 0 rgba(0, 0, 0, 0.4);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.pokemon:after {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.9);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    z-index: -1;
+}
+
+.pokemon:hover{
+    transform: scale(1.09, 1.09);
+}
+
+.pokemon .name {
+    color: #fff;
+    margin: .25rem 0;
+    text-transform: capitalize;
 }
 
 .pokemon .number {
     color: #000;
-    opacity: .3;
+    opacity: 30%;
     text-align: right;
-    font-size: .625rem;
-}
-
-.pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
+    font-size: .825rem;
 }
 
 .pokemon .detail {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -113,52 +116,35 @@
 }
 
 .pokemon .detail .types .type {
+    text-transform: capitalize;
     color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
     filter: brightness(1.1);
+    font-size: .625rem;
+    padding: 0.1rem 0.5rem;
+    margin: 0.5rem 0;
+    border-radius: 1rem;
     text-align: center;
 }
 
 .pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
+    max-width: 75%;
+    height: 80px;
+    align-self: flex-end;
 }
 
-.pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
-}
-
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
-}
-
-@media screen and (min-width: 380px) {
+@media screen and (min-width: 350px){
     .pokemons {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 576px){
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px){
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
